change isBlank with isEmpty